# genetic_prediction

./: .gitignore  README.md  batch_impute_score.py  convert_to_vcf.py  environment.yml  find_best_pgs.py  impute.py  parse_phenotypes.py  pgs_trait_recommendations.md  pgs_vs_qaly_comparison.md  polygenic_prediction_essay.md  predict.py  predict_raw.py  preremap.py  pyproject.toml  qaly_calculator.py  readme.md  shrink_reference.py
data/: PGS001229.txt  height.rss  pgs_results.tsv  pgs_results_imputed.tsv  pgs_search_results.json  pgs_search_results_extended.json  phenotypes.tsv  sex.rss
docs/: embryo_report.html  pgs_refresh_candidates.md  r2_scaling_report.html
examples/: README.md  embryo_selection_demo.py  fetch_example_genome.sh  r2_scaling.py
genepred/: __init__.py  catalog.py  cli.py  embryo.py  io.py  paths.py  pca.py  qaly.py  report.py  scoring.py
genepred/impute/: __init__.py  beagle.py  michigan.py
genepred/resources/: 1kg_pgs_summary.tsv  README.md  pgs_pc_coef.tsv
reference/: README.md
reference/onekg/: build_1kg_reference.py  compute_1kg_pca.py  dedup_1kg.py  download_1kg.sh
reference/weights/: build_cognition_v2_sbayesrc.sh  build_open_sbayesrc.sh  build_pgc_sbayesrc.sh  download_cognition_sumstats.sh  ldpred_inf.py  mtag_lite.py  pseudo_validate.py
tests/: test_catalog.py  test_io.py  test_qaly.py  test_scoring.py
validation/: README.md  download_opensnp_archives.sh  validate_height_archive.py
validation/aux/: check_homemade_correlation.py  compare_imputation.py  michigan_to_zscore.py
