[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "genepred"
version = "0.1.0"
description = "Polygenic score pipeline and embryo-selection QALY calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "click",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
validation = ["snps"]   # only validation/preremap.py & predict_raw.py need this
dev = ["pytest", "ruff"]

[project.scripts]
genepred = "genepred.cli:main"

[tool.setuptools]
packages = ["genepred", "genepred.impute"]

[tool.setuptools.package-data]
genepred = ["resources/*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "PLC0415"]
ignore = [
    "E501",  # line length — handled by formatter, prose comments often exceed
    "B905",  # zip() strict= — explicit False everywhere is noise
    "B007",  # unused loop variable — common in tuple-unpack iteration
]
